--- a/Lab2/index.html
+++ b/Lab2/index.html
@@ -94,6 +94,7 @@ sitemap:
                   {% if mod3 == 0 %}
                   <article>
   									<header>
+  										<h2>Hello World</h2>
   										<h2><a href="#">Sponsored</a></h2>
   									</header>
 
