--- a/index.html
+++ b/index.html
@@ -28,11 +28,10 @@ sitemap:
 				<!-- Intro -->
 					<div id="intro">
             <h1>{{site.title}}</h1>
-						<h2>The Jekyll Theme Version</h2>
-						<p>Massively is an HTML5 website theme designed by <a href="https://twitter.com/ajlkn">@ajlkn</a> for <a href="https://html5up.net">HTML5 UP</a><br />
-						and released for free under the <a href="https://html5up.net/license">Creative Commons license</a>. Jekyll integration by <a href="https://somiibo.com">Somiibo</a></p>
+						<h2>FaMAF</h2>
+						<p>Esta página contiene los laboratorios creados para la diplomatura de Ciencia de Datos y Aprendizage Automatico</p>
 						<ul class="actions">
-							<li><a href="#header" class="button icon solo fa-arrow-down scrolly">Continue</a></li>
+							<li><a href="#header" class="button icon solo fa-arrow-down scrolly">Continuar</a></li>
 						</ul>
 					</div>
 
